# feedapp-group13

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: build-docker.yml
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cookies.txt  pyproject.toml  sqlc.yaml
backend/app/: config.py  consume.py  main.py
backend/app/auth/: cookie.py
backend/app/db/: db.py  kafka.py  valkey.py
backend/app/db/sqlc/: auth.py  models.py  poll.py  user.py  vote.py
backend/app/routes/: auth_debug.py  poll.py  user.py  vote.py
backend/app/sse/: manager.py
backend/app/utils/: user_info.py  vote_counter.py
backend/db/migrations/: 20251023204242_create_user.sql  20251029223203_create_poll.sql  20251103155856_create_rbac.sql
backend/db/queries/: auth.sql  poll.sql  user.sql  vote.sql
backend/tests/: conftest.py
backend/tests/integration/: test_poll_workflow.py  test_user_workflow.py  test_vote_workflow.py
backend/tests/manual/: load_test_vote_counting.py
experiment/: README.md
experiment/docker/: coordinator.yml  kafka-broker.yml  redpanda-broker.yml
experiment/docker/coordinator-config/: prometheus.yml
experiment/infra/: .gitignore  cloud-init-broker.yaml  cloud-init-coordinator.yaml  main.tf  outputs.tf
experiment/scripts/: 1-verify-provisioning.sh  2-setup-hostnames.sh  3-check-brokers.sh
frontend/: Dockerfile  README.md  biome.json  index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: routeTree.gen.ts  styles.css
resources/icon/: colors.less
(+16 files in other folders)
